Fixed the location and site ticker
